# Decathlon_VOC_Analyzer

./: .env  .gitignore  IMPLEMENTATION_SUMMARY.md  OPENVINO_INTEGRATION.md  QUICKSTART_LOCAL_INFERENCE.md  README.md  demo_local_inference.py  fix_rerank.py  pyproject.toml  test_intel_gpu_npu.py  test_openvino_integrated.py  test_openvino_vs_pytorch.py
02_outputs/: README.md
02_outputs/3_indexes/: local_evidence_index.json
02_outputs/4_reports/: dataset_normalization_report.json
02_outputs/8_evaluations/: manifest_evaluation_report.json
03_configs/: review_sampling_profiles.json  runtime_execution_policy.json
04_scripts/: bench_image_rerank.py  clear_generated_outputs.py  download_local_qwen_models.py  evaluate_manifests.py  export_html_report.py  export_single_product_chinese_dataset.py  launch_interactive_workflow.py  run_workflow.py  validate_multimodal_runtime.py
04_scripts/launcher_ui/: category.js  (+4 more)
06_tests/: conftest.py  test_analysis_api.py  test_analysis_service.py  test_clear_generated_outputs_script.py  test_dataset_api.py  test_dataset_service.py  test_embedding_and_reranker.py  test_html_export_service.py  test_index_api.py  test_index_backends.py  test_index_service.py  test_launch_interactive_workflow.py  test_manifest_evaluation_service.py  test_prompt_registry.py  test_question_service.py  test_retrieval_service.py  test_review_api.py  test_review_service.py  test_run_workflow_script.py  test_runtime_policy.py  test_runtime_progress.py  test_validate_multimodal_runtime_script.py
0_docs/: 04_实验运行指南.md
scripts/: export_single_product_chinese_dataset.py
tests/: conftest.py  test_analysis_api.py  test_analysis_service.py  test_dataset_api.py  test_dataset_service.py  test_embedding_and_reranker.py  test_index_api.py  test_index_backends.py  test_index_service.py  test_prompt_registry.py  test_review_api.py  test_review_service.py
参考论文/: 00_abstract.md  01_introduction.md  02_background.md  03_related_work.md  04_methodology.md  05_experimental_setup.md  06_experiments.md  07_discussion.md  08_conclusion.md  09_limitations.md  10_acknowledgments.md  11_references.md  11_references_被引用核验表.md  README.md  appendix.md  citation_key_map.md  ref.bib  title_page.md
论文_md形式/: 00_abstract.md  01_introduction.md  02_background.md  03_related_work.md  04_methodology.md  05_experimental_setup.md  06_experiments.md  07_discussion.md  08_conclusion.md  09_limitations.md  10_acknowledgments.md  11_references.md  README.md  appendix.md  citation_key_map.md  title_page.md
设计文档/: README.md
설계문서_한국어판/: 문서-개요.md
(+876 files in other folders)
