[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decathlon-voc-analyzer"
version = "0.1.0"
description = "Evidence-driven multimodal VOC analyzer for Decathlon products"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "orjson>=3.10.0,<4.0.0",
    "rich>=13.7.0,<14.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "openai>=1.40.0,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
    "torchvision>=0.26.0,<0.27.0",
    "qdrant-client>=1.11.0,<2.0.0",
    "safetensors>=0.6.0,<1.0.0",
    "torch>=2.8.0,<3.0.0",
    "transformers>=4.51.0,<5.0.0",  # 支持 Qwen3 系列小参数模型
    "numpy>=1.24.0,<2.0.0",  # 本地推理需要
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]
# 本地模型推理 GPU 优化（可选）
gpu = [
    "flash-attn>=2.5.0,<3.0.0",  # FlashAttention-2 加速
    "bitsandbytes>=0.44.0,<1.0.0",  # 模型量化支持
]

[tool.setuptools]
package-dir = {"" = "05_src"}

[tool.setuptools.packages.find]
where = ["05_src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["05_src"]
testpaths = ["06_tests"]